# micropython-pn532

./: README.md  pyproject.toml
.github/workflows/: micropython-mpy.yml  mip-package.yml
examples/: desfire.py  readtag.py
pn532/: __init__.py  target.py
pn532/tags/: __init__.py  desfire.py  isodep.py  mifare_classic.py  ntag.py
pn532/transports/: __init__.py  spi.py
